[CRD iOS] Replace deprecated openURL

This CL replaces the deprecated openURL: call with
openURL:options:completionHandler:.

Bug: 774483
Change-Id: Idf9414bbacc9e633c98f1190a6aee89e2d0ebacd